[package]
name = "tokio-async-io"
version = "0.1.0"
authors = ["yihuang <yi.codeplayer@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["io-driver"] }
mio = "0.6"
futures = "0.3"

[dev-dependencies]
tokio = { version = "0.2", features = ["io-driver", "macros", "rt-core", "rt-util"] }
zmq = { git = "https://github.com/yihuang/rust-zmq.git", branch = "async_smol" }
